tests/fixtures/coflow/invalid/parse/unclosed-block.cf
fn main() {
  var x = 1
